// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The filterable table headers component only renders elements that are searchable 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <Component
    filterArgs={Object {}}
    key="testtest"
    onChange={[Function]}
  />
  <Component
    filterArgs={Object {}}
    key="test2test2"
    onChange={[Function]}
  />
  <Component
    filterArgs={Object {}}
    key="test3test3"
    onChange={[Function]}
  />
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders a option input if values are provided 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <Component
    filterArgs={Object {}}
    key="testtest"
    onChange={[Function]}
  />
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders a text input if values are not provided 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <Component
    filterArgs={Object {}}
    key="testtest"
    onChange={[Function]}
  />
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders as many td elements as search options, plus one for the search buttons 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <Component
    filterArgs={
      Object {
        "test": "a",
        "test2": "b",
      }
    }
    key="testtest"
    onChange={[Function]}
  />
  <Component
    filterArgs={
      Object {
        "test": "a",
        "test2": "b",
      }
    }
    key="test2test2"
    onChange={[Function]}
  />
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;

exports[`The filterable table headers component renders search and reset buttons 1`] = `
<tr
  className="jsx-870174952"
  onKeyDown={[Function]}
>
  <td
    className="jsx-870174952 flex"
  >
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="outline-secondary"
    >
      Clear
    </Button>
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "5px",
        }
      }
      variant="primary"
    >
      Apply
    </Button>
  </td>
  <JSXStyle
    id="870174952"
  >
    .flex.jsx-870174952{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
  </JSXStyle>
</tr>
`;
